Prevent overlapping with sidebar

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -4,7 +4,7 @@
 ***/
 
 .content {
-    max-width: 870px;
+    max-width: 800px;
     margin: auto;
     font-size: 22px;
     line-height: 1.5;
